# SLWTgPoster

./: .env_example  .gitignore  .gitingnore  README.md  pyproject.toml  pyrightconfig.json
backend/common/: settings.py
backend/utils/: models.py
docs/: technical_requirements.md
